speedtest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: librespeed
  namespace: rhel-lightspeed-ai
  labels:
    app: librespeed
spec:
  type: ClusterIP
  selector:
    app: librespeed
  ports:
  - name: http
    port: 80
    targetPort: 8080
    protocol: TCP
