speedtest/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: librespeed
  namespace: rhel-lightspeed-ai
  labels:
    app: librespeed
spec:
  to:
    kind: Service
    name: librespeed
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
